<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:id="@+id/etItemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name" />

    <EditText
    android:id="@+id/etDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/description" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estimated_price"
        android:inputType="number" />

    <EditText
        android:id="@+id/etType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"/>

    <CheckBox
        android:id="@+id/cbPurchased"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purchased" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>