<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="#fff6a0"
    android:layout_margin="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ivType"
            android:paddingRight="5dp"
            android:src="@drawable/object"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/ivType">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivType"
            android:text="@string/price" />

        <CheckBox
            android:id="@+id/cbPurchased"
            android:text="@string/purchased"
            android:layout_below="@id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEdit"
            android:text="@string/edit"
            android:layout_below="@id/cbPurchased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</android.support.v7.widget.CardView>